tests/fixtures/errors/member_not_public.full
error[E0101]: '_dist' is not public on type 'point'
 --> member_not_public.z:9:10
   9 |     d: p._dist
     |          ^^^^^
1 error found
